--- a/src/components/delete-photo/delete-photo.styles.css
+++ b/src/components/delete-photo/delete-photo.styles.css
@@ -24,3 +24,9 @@
 .delete-photo__cancel:hover {
     color: var(--green);
 }
+
+@media (max-width: 768.98px) {
+    .delete-photo {
+        padding: var(--space-sm);
+    }
+}
